--- a/css/styles.css
+++ b/css/styles.css
@@ -100,6 +100,7 @@ img {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: #212121;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-link:hover,
@@ -125,6 +126,7 @@ img {
   color: #757575;
   margin-left: 10px;
   display: flex;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contacts-icon-envelope {
@@ -146,6 +148,7 @@ img {
   letter-spacing: 0.02em;
   margin-left: 10px;
   display: flex;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* ---------HERO--------- */
@@ -317,6 +320,7 @@ img {
 
 .webstudio-team-icon {
   fill: #afb1b8;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .webstudio-soc-link {
@@ -327,6 +331,7 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .webstudio-soc-link:hover,
@@ -360,6 +365,8 @@ img {
   border-radius: 4px;
   border-color: transparent;
   padding: 6px 22px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-filter-button:hover,
@@ -370,7 +377,7 @@ img {
 
 .portfolio-filter-button:hover,
 .portfolio-filter-button:focus {
-  background: #2196f3;
+  background-color: #2196f3;
   color: #ffffff;
 }
 
@@ -443,10 +450,12 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-item-icon {
   fill: #a2a4ab;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-item-link:hover,
@@ -541,6 +550,7 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .webstudio-soc-icon {
@@ -550,9 +560,4 @@ img {
 .webstudio-footer-soc-link:hover,
 .webstudio-footer-soc-link:focus {
   background-color: #0f99fe;
-}
-
-.webstudio-footer-soc-link:hover .webstudio-soc-icon,
-.webstudio-footer-soc-link:focus .webstudio-soc-icon {
-  fill: #ffffff;
 }
