--- a/css/styles.css
+++ b/css/styles.css
@@ -391,6 +391,23 @@ img {
   width: calc((100% - 60px) / 3);
 }
 
+.portfolio-top-wrap {
+  position: relative;
+}
+
+.portfolio-item-hover-text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 63px 24px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.5;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  background-color: rgba(54, 161, 243, 0.829);
+}
+
 .portfolio-item:hover,
 .portfolio-item:focus {
   box-shadow: 0px 2px 2px rgb(198, 198, 198), 0px 4px 4px rgb(198, 198, 198),
