--- a/css/styles.css
+++ b/css/styles.css
@@ -73,6 +73,13 @@ img {
   align-items: center;
 }
 
+.current::after {
+  content: '';
+  width: 40px;
+  height: 1px;
+  background-color: #2196f3;
+}
+
 .header-connect {
   margin-left: auto;
 }
@@ -391,14 +398,21 @@ img {
   width: calc((100% - 60px) / 3);
 }
 
+.portfolio-item:hover .portfolio-item-hover-text {
+  transform: translateY(0%);
+}
+
 .portfolio-top-wrap {
   position: relative;
+  overflow: hidden;
 }
 
 .portfolio-item-hover-text {
   position: absolute;
   top: 0;
   left: 0;
+  width: 100%;
+  height: 100%;
   padding: 63px 24px;
   font-weight: 400;
   font-size: 18px;
@@ -406,6 +420,9 @@ img {
   letter-spacing: 0.03em;
   color: #ffffff;
   background-color: rgba(54, 161, 243, 0.829);
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  overflow: auto;
 }
 
 .portfolio-item:hover,
@@ -577,4 +594,48 @@ img {
 .webstudio-footer-soc-link:hover,
 .webstudio-footer-soc-link:focus {
   background-color: #0f99fe;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.2);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 528px;
+  min-height: 600px;
+  background: #ffffff;
+  border-radius: 4px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+.modal-close {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  background-color: transparent;
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.no-scroll {
+  overflow: hidden;
 }
