--- a/css/styles.css
+++ b/css/styles.css
@@ -73,13 +73,6 @@ img {
   align-items: center;
 }
 
-.current::after {
-  content: '';
-  width: 40px;
-  height: 1px;
-  background-color: #2196f3;
-}
-
 .header-connect {
   margin-left: auto;
 }
@@ -107,7 +100,10 @@ img {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: #212121;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  /*transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);*/
+  transition-property: color, background-color, box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-link:hover,
@@ -133,7 +129,10 @@ img {
   color: #757575;
   margin-left: 10px;
   display: flex;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  /*transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);*/
+  transition-property: color, background-color, box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contacts-icon-envelope {
@@ -155,7 +154,10 @@ img {
   letter-spacing: 0.02em;
   margin-left: 10px;
   display: flex;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  /*transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);*/
+  transition-property: color, background-color, box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* ---------HERO--------- */
@@ -248,11 +250,6 @@ img {
 
 /* ---------ACTIVITIES--------- */
 
-.activities-list {
-  display: flex;
-  column-gap: 30px;
-}
-
 .activities-main {
   font-weight: 700;
   font-size: 36px;
@@ -261,6 +258,31 @@ img {
   letter-spacing: 0.03em;
   color: #212121;
   margin-bottom: 50px;
+}
+
+.activities-list {
+  display: flex;
+  column-gap: 30px;
+}
+
+.activities-item {
+  position: relative;
+}
+
+.activities-cover-text {
+  position: absolute;
+  top: 100%;
+  left: 100%;
+  transform: translate(-100%, -100%);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.1;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+  background-color: rgba(47, 48, 58, 0.8);
+  padding: 27px 107px;
+  height: 70px;
 }
 
 /* ---------TEAM--------- */
@@ -339,6 +361,9 @@ img {
   justify-content: center;
   align-items: center;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition-property: color, background-color, box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .webstudio-soc-link:hover,
