--- a/css/styles.css
+++ b/css/styles.css
@@ -281,8 +281,10 @@ img {
   text-transform: uppercase;
   color: #ffffff;
   background-color: rgba(47, 48, 58, 0.8);
-  padding: 27px 107px;
+  padding-left: 107px;
+  padding-top: 27px;
   height: 70px;
+  width: 100%;
 }
 
 /* ---------TEAM--------- */
