--- a/css/styles.css
+++ b/css/styles.css
@@ -68,6 +68,13 @@ img {
   column-gap: 50px;
 }
 
+.header-list {
+  content: '';
+  width: 48px;
+  height: 4px;
+  background-color: #2196f3;
+}
+
 .header .container {
   display: flex;
   align-items: center;
@@ -100,7 +107,6 @@ img {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: #212121;
-  /*transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);*/
   transition-property: color, background-color, box-shadow;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -279,8 +285,9 @@ img {
   text-transform: uppercase;
   color: #ffffff;
   background-color: rgba(47, 48, 58, 0.8);
-  padding-left: 107px;
-  padding-top: 27px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 70px;
   width: 100%;
 }
