--- a/css/styles.css
+++ b/css/styles.css
@@ -68,11 +68,16 @@ img {
   column-gap: 50px;
 }
 
-.header-list::after {
+.header-link.current::after {
   content: '';
-  width: 48px;
+  display: block;
+  width: 100%;
   height: 4px;
   background-color: #2196f3;
+  position: absolute;
+  bottom: -32px;
+  left: 0;
+  border-radius: 2px;
 }
 
 .header .container {
@@ -102,6 +107,7 @@ img {
 }
 
 .header-link {
+  position: relative;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -538,12 +544,12 @@ img {
 
 .footer {
   background: #2f303a;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .footer .container {
   display: flex;
-  padding-top: 60px;
-  padding-bottom: 60px;
 }
 
 .footer-logo {
